--- a/exercicios-mod-4/ex003/mq005/index.html
+++ b/exercicios-mod-4/ex003/mq005/index.html
@@ -5,12 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Media Query</title>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"  rel="stylesheet">
     <link rel="stylesheet" href="estilos/style.css">
 </head>
 <body>
-    <header>
+    <header> 
         <h1>Meu Site</h1>
-        <menu>
+        <span id="burguer" class="material-icons" onclick="clickMenu()">menu</span>
+        <menu id="itens">
             <ul>
                 <li><a href="#">Opção 1</a></li>
                 <li><a href="#">Opção 2</a></li>
@@ -39,5 +41,7 @@
 
         </article>
     </main>
+
+    <script src="script.js">aa</script>
 </body>
 </html>
