--- a/exercicios-mod-4/ex003/mq005/index.html
+++ b/exercicios-mod-4/ex003/mq005/index.html
@@ -7,8 +7,11 @@
     <title>Media Query</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"  rel="stylesheet">
     <link rel="stylesheet" href="estilos/style.css">
+    <link rel="stylesheet" href="estilos/media-query.css">
+
+
 </head>
-<body>
+<body onresize="Mudou()">
     <header> 
         <h1>Meu Site</h1>
         <span id="burguer" class="material-icons" onclick="clickMenu()">menu</span>
